...
            }
            .padding()
            .navigationTitle("Сканер карт")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .cancellationAction) {
                    Button("Закрыть") { dismiss() }
                }
            }
            .sheet(item: $targetNewCard) { item in
                CardFormView(viewModel: CardFormViewModel(initialCardNumber: item.value, context: context))
            }
            .sheet(item: $targetFoundCard) { card in
...
